<resources>
    <string name="app_name">EasyPrep</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save">save</string>



    <string name="cancelChanges_title">Cancel changes</string>
    <string name="cancelChanges_message">If you select yes, you will lose all modifications made!</string>
    <string name="choose_email_client">Choose an email client</string>

    <!-- Strings of Nutriments -->
    <string-array name="nutrimentTitles">
        <item><i>Veggies</i></item>
        <item>Fruits</item>
        <item>Proteins</item>
        <item>Carbohydrates</item>
        <item>Healthy Fats</item>
        <item>Seeds and Dressings</item>
        <item>Oils and Nut Butters</item>
    </string-array>

    <!-- String of Meals -->
    <string-array name="mealTitles">
        <item>Breakfast</item>
        <item>Snack1</item>
        <item>Lunch</item>
        <item>Snack2</item>
        <item>Dinner</item>
        <item>Snack3</item>
    </string-array>

    <!-- String of Days -->
    <string-array name="dayTitles">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>

    <string-array name="pagerDayTitles">
        <item>Mon</item>
        <item>Tue</item>
        <item>Wed</item>
        <item>Thu</item>
        <item>Fri</item>
        <item>Sat</item>
        <item>Sun</item>
    </string-array>

    <!-- String of ActionBar DetailDailyPortionActivity -->
    <string name="portionsOf">Portions of</string>

    <!-- Strings of ActionBar MainActivity -->
    <string name="contact">Contact</string>
    <string name="supermarketList">Supermarket list</string>
    <string name="introduction">Introduction</string>
    <string name="profile">Profile</string>

    <!-- Strings of ActionBar MainActivity -->
    <string name="homepage">Home page</string>

    <!-- Strings of Toast Messages -->
    <string name="updateSuccessful">Changes made successfully</string>

    <!-- Strings of Hints Meals Description -->
    <string-array name="hintsMealDescription">
        <item>Ex: Broccoli, carrot … etc</item>
        <item>Ex: Apple, banana … etc</item>
        <item>Ex: Chicken thigh, filet mignon … etc</item>
        <item>Ex: Bread, rice … etc</item>
        <item>Ex: Dark Chocolate, avocados … etc</item>
        <item>Ex: Sunflower Seeds, tahini garlic … etc</item>
        <item>Ex: Olive oil, chocolate sesame butter … etc</item>
    </string-array>

    <!-- Strings of AlertDialog -->
    <string name="copy">Copy %s\'s meal plan?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="alert_message">If you copy %s\'s meal plan, you will miss your current day\'s model. Do you wish to continue?</string>
    <string name="cancel">Cancel</string>

    <!-- Strings of Login -->
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="sing_in">Sing In</string>
    <string name="sing_out">Sing Out</string>
    <string name="sing_up">Sing Up</string>
    <string name="password_confirmation">Password confirmation</string>
    <string name="sing_in_button">You already have an account?</string>
    <string name="sing_up_button">Do not have an account?</string>
    <string name="warning_empty_fields">Null fields</string>
    <string name="warning_incorrect_password_confirmation">Incorrect password confirmation</string>

    <!-- String of Login Menu -->
    <string name="know_app">Know the App</string>
    <string name="retrieve_account">Retrieve account</string>

    <!-- String of AccountRecoveryActivity -->
    <string name="confirm">Confirm</string>
    <string name="change_password">Change password</string>
    <string name="message_change_email">Confirmation of password change has been sent to your email!</string>
    <string name="error_message_change_email">This e-mail is not registered!</string>

    <!-- String of ProfileActivity -->
    <string name="new_password">New password</string>
    <string name="new_password_confirmation">New password confirmation</string>
    <string name="new_email">New e-mail</string>
    <string name="new_email_confirmation">New e-mail confirmation</string>
    <string name="current_email">Current e-mail</string>
    <string name="current_password">Current password</string>

    <!-- String of AccountManagementActivity -->
    <string name="change_email">Change e-mail</string>

</resources>
