<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/supermarketListMenu"
        android:title="@string/supermarketList"
        app:showAsAction="never" />

    <item
        android:id="@+id/introductionMenu"
        android:title="@string/introduction"
        app:showAsAction="never" />

    <item
        android:id="@+id/contactMenu"
        android:title="@string/contact"
        app:showAsAction="never" />

    <item
        android:id="@+id/change_password_menu"
        android:title="@string/change_password"
        app:showAsAction="never" />

    <item
        android:id="@+id/singOutMenu"
        android:title="@string/sing_out"
        app:showAsAction="never" />
</menu>